--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="home-img">
-            <img src="/Source-Images/home-subject.png" alt="">
+            <img src="Source-Images/home-subject.png" alt="">
         </div>
 
     </section>
@@ -63,37 +63,37 @@
         <div class="gyms-content">
 
             <div class="row">
-                <img src="/Source-Images/ABS-Fitness.jpg" alt="">
+                <img src="Source-Images/ABS-Fitness.jpg" alt="">
 
                 <h4>ABS Fitness</h4>
             </div>
 
             <div class="row">
-                <img src="/Source-Images/Anytime-fitness.png" alt="">
+                <img src="Source-Images/Anytime-fitness.png" alt="">
 
                 <h4>Anytime Fitness</h4>
             </div>
 
             <div class="row">
-                <img src="/Source-Images/Body-Lab.jpeg" alt="">
+                <img src="Source-Images/Body-Lab.jpeg" alt="">
 
                 <h4>Body Lab</h4>
             </div>
 
             <div class="row">
-                <img src="/Source-Images/Golds-gym.jpeg" alt="">
+                <img src="Source-Images/Golds-gym.jpeg" alt="">
 
                 <h4>Golds Gym</h4>
             </div>
 
             <div class="row">
-                <img src="/Source-Images/talwalkers.png" alt="">
+                <img src="Source-Images/talwalkers.png" alt="">
 
                 <h4>Talwalkers</h4>
             </div>
 
             <div class="row">
-                <img src="/Source-Images/The-sweat-arena.png" alt="">
+                <img src="Source-Images/The-sweat-arena.png" alt="">
 
                 <h4>The Sweat Arena</h4>
             </div>
@@ -111,7 +111,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/Source-Images/About-Us.jpg" alt="">
+            <img src="Source-Images/About-Us.jpg" alt="">
         </div>
 
         <div class="about-content">
