--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header Code -->
 
     <header>
-        <a href="#home" class="logo">Fits<span>Bit</span></a>
+        <a href="#home" class="logo">Fits<span>Bit</span><p id="mobile-gym">The mobile gym</p></a>
 
         <div class='bx bx-menu' id="menu-icon"></div>
 
