Update in pricing section

--- a/index.html
+++ b/index.html
@@ -137,57 +137,8 @@
         <div class="plans-content">
 
             <div class="box">
-                <h3>BEGINEER</h3>
-                <h2><span>₹1499/Month</span></h2>
-
-                <ul>
-                    <li>25 Credits for gym access</li>
-                    <li>Smart Workout guidance</li>
-                    <li>Home video workout access</li>
-                </ul>
-                <a href="#">
-                    Join Now
-                    <i class='bx bxs-right-arrow-alt'></i>
-                </a>
-            </div>
-
-            <div class="box">
-                <h3>PRO</h3>
-                <h2><span>₹2799/Month</span></h2>
-
-                <ul>
-                    <li>35 Credits for gym access</li>
-                    <li>Smart Workout guidance</li>
-                    <li>Home video workout access</li>
-                    <li>Priority support</li>
-                </ul>
-                <a href="#">
-                    Join Now
-                    <i class='bx bxs-right-arrow-alt'></i>
-                </a>
-            </div>
-
-            <div class="box">
-                <h3>ELITE</h3>
-                <h2><span>₹4999/Month</span></h2>
-
-                <ul>
-                    <li>50 Credits for gym access</li>
-                    <li>Smart Workout guidance</li>
-                    <li>Home video workout access</li>
-                    <li>Priority support</li>
-                    <li>Premium gym access</li>
-                    <li>Personalized workout recommendations</li>
-                </ul>
-                <a href="#">
-                    Join Now
-                    <i class='bx bxs-right-arrow-alt'></i>
-                </a>
-            </div>
-
-            <div class="box">
                 <h3>10 Credits</h3>
-                <h2><span>₹699/Month</span></h2>
+                <h2><span>₹699</span></h2>
 
                 <ul>
                     <li>Get 10 Credits</li>
@@ -201,7 +152,7 @@
 
             <div class="box">
                 <h3>20 Credits</h3>
-                <h2><span>₹1299/Month</span></h2>
+                <h2><span>₹1299</span></h2>
 
                 <ul>
                     <li>Get 20 Credits</li>
@@ -215,7 +166,7 @@
 
             <div class="box">
                 <h3>50 Credits</h3>
-                <h2><span>₹2999/Month</span></h2>
+                <h2><span>₹2999</span></h2>
 
                 <ul>
                     <li>Get 50 Credits</li>
