--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
 
         <div class="top-btn">
-            <a href="/login.html" class="nav-btn">Join Us</a>
+            <a href="login.html" class="nav-btn">Join Us</a>
         </div>
     </header>
 
